# product_connect

./: .coveragerc  .gitignore  AGENTS.md  __init__.py  __manifest__.py  codex_setup.sh  conftest.py  docker-compose.yml  jsconfig.json  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  webpack.config.js
controllers/: __init__.py  download_controllers.py  shopify_webhook.py
data/: delivery_carrier_mappings.xml  delivery_carriers.xml  delivery_products.xml  motor_part_template_data.xml  motor_stat_data.xml  motor_test_selection_data.xml  motor_test_template_data.xml  product_condition_data.xml  res_config_data.xml  sku_sequence.xml
docker/: Dockerfile
graphql/: graphql.config.yml  shopify_bulk_operation.graphql  shopify_order.graphql  shopify_product.graphql  shopify_schema_2025-04.sdl
guides/: motor_checkin_guide.md
mixins/: __init__.py  image_mixin.py  label_mixin.py  notification_manager_mixin.py  transaction_mixin.py
models/: __init__.py  delivery_carrier.py  ir_actions.py  ir_ui_view.py  motor.py  motor_part.py  motor_product.py  motor_stat.py  motor_test.py  printnode_interface.py  product_color.py  product_manufacturer.py  product_product.py  product_template.py  publisher_warranty_contract.py  repair_order.py  res_partner.py  res_users.py  sale_order.py  sale_order_line.py  shopify_sync.py  stock_move.py
report/: motor_product_reports.xml  motor_reports.xml  product_reports.xml
security/: ir.model.access.csv
services/: shopify_order_importer.py  shopify_product_deleter.py  shopify_product_exporter.py  shopify_product_importer.py  shopify_service.py
tests/: __init__.py  base_types.py  common_imports.py  conftest.py  test_base.py  test_basic.py  test_helpers.py  test_import_idempotency_base.py  test_import_idempotency_simple.py  test_import_idempotency_unit.py  test_integration.py  test_model_motor.py  test_model_motor_workflow.py  test_model_product_processing_dashboard.py  test_model_product_template.py  test_model_shipping.py  test_model_shipping_analytics.py  test_model_transaction_mixin.py  test_motor.py  test_motor_tour.py  test_multigraph_integration.py  test_multigraph_view.py  test_order_shipping_import.py  test_product_template.py  test_shipping.py  (+24 more)
(+278 files in other folders)
